--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "diy-pwa",
-  "version": "1.0.25",
+  "version": "1.0.26",
   "description": "Rapid 80% working prototype for entrepreneur engineers",
   "bin": "index.js",
   "files": [
@@ -16,7 +16,7 @@
       "import": "./dist/diy-pwa.es.js",
       "require": "./dist/diy-pwa.umd.js"
     },
-    "./dist/style.css": {
+    "./style.css": {
       "import": "./dist/style.css",
       "require": "./dist/style.css"
     }
