--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "cheerio": "^1.0.0-rc.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "stripe": "^12.6.0",
     "styled-components": "^6.0.0-rc.1",
     "vite": "^4.2.1",
     "vite-plugin-css-injected-by-js": "^3.1.1",
