--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "diy-pwa",
-  "version": "1.0.33",
+  "version": "1.0.34",
   "description": "Rapid 80% working prototype for sales engineers",
   "bin": "index.js",
   "files": [
@@ -52,8 +52,9 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "jszip": "^3.10.1",
-    "stripe": "^12.6.0",
-    "node-fetch": "^3.3.0"
+    "node-fetch": "^3.3.0",
+    "ora": "^6.3.1",
+    "stripe": "^12.6.0"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^6.4.0",
