--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "diy-pwa",
-  "version": "1.0.39",
+  "version": "1.0.40",
   "description": "Rapid 80% working prototype for sales engineers",
   "bin": "index.js",
   "files": [
@@ -15,13 +15,17 @@
   "main": "./dist/diy-pwa.umd.js",
   "module": "./dist/diy-pwa.es.js",
   "exports": {
-    ".": {
-      "import": "./dist/diy-pwa.es.js",
-      "require": "./dist/diy-pwa.umd.js"
+    "./components": {
+      "import": "./dist/components.es.js",
+      "require": "./dist/components.umd.js"
     },
     "./style.css": {
       "import": "./dist/style.css",
       "require": "./dist/style.css"
+    },
+    ".": {
+      "import": "./dist/index.es.js",
+      "require": "./dist/index.umd.js"
     }
   },
   "scripts": {
