--- a/package.json
+++ b/package.json
@@ -1,16 +1,10 @@
 {
   "name": "diy-pwa",
-  "version": "1.0.53",
+  "version": "1.0.54",
   "description": "Rapid 80% working prototype for sales engineers",
   "bin": "index.js",
   "files": [
-    "dist",
-    "src/Loader.js",
-    "src/StripeLoader.js",
-    "src/ProductLoader.js",
-    "src/ZipLoader.js",
-    "src/question.js",
-    "README.md"
+    "dist"
   ],
   "main": "./dist/diy-pwa.umd.js",
   "module": "./dist/diy-pwa.es.js",
@@ -54,18 +48,17 @@
   "homepage": "https://diy-pwa.github.io/",
   "type": "module",
   "dependencies": {
-    "dotenv": "^16.0.3",
-    "jszip": "^3.10.1",
     "node-fetch": "^3.3.0",
-    "ora": "^6.3.1",
-    "stripe": "^12.6.0"
+    "ora": "^6.3.1"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@vitejs/plugin-react": "^3.1.0",
     "cheerio": "^1.0.0-rc.12",
+    "jszip": "^3.10.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "stripe": "^12.6.0",
     "vite": "^4.2.1",
     "vite-plugin-svgr": "^3.2.0",
     "vitest": "^0.29.8"
