--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "diy-pwa",
-  "version": "1.0.57",
+  "version": "1.0.58",
   "description": "Rapid 80% working prototype for sales engineers",
   "bin": "index.js",
   "files": [
@@ -59,10 +59,14 @@
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@vitejs/plugin-react": "^3.1.0",
     "cheerio": "^1.0.0-rc.12",
+    "cloudflare2express": "^1.0.2",
+    "dotenv": "^16.1.4",
+    "express": "^4.18.2",
     "jszip": "^3.10.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "stripe": "^12.6.0",
+    "supertest": "^6.3.3",
     "vite": "^4.2.1",
     "vite-plugin-svgr": "^3.2.0",
     "vitest": "^0.29.8"
