--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "jszip": "^3.10.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-toastify": "^9.1.3",
     "stripe": "^12.6.0",
     "supertest": "^6.3.3",
     "vite": "^4.2.1",
