--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@vitejs/plugin-react": "^3.1.0",
     "cheerio": "^1.0.0-rc.12",
     "cloudflare2express": "^1.0.2",
+    "diy-pwa": "^1.0.66",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "jszip": "^3.10.1",
@@ -84,6 +85,7 @@
     "supertest": "^6.3.3",
     "vite": "^4.2.1",
     "vite-plugin-svgr": "^3.2.0",
-    "vitest": "^0.29.8"
+    "vitest": "^0.29.8",
+    "w3-css": "^4.1.0"
   }
 }
