--- a/package.json
+++ b/package.json
@@ -1,23 +1,45 @@
 {
   "name": "diy-pwa",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Rapid 80% working prototype for entrepreneur engineers",
-  "bin": "index.js",
+  "type": "module",
+  "bin": {
+    "diy-pwa": "bin/diy-pwa.js"
+  },
+  "main": "lib/index.js",
   "scripts": {
-    "test": "jasmine"
+    "test": "vitest run spec"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/diy-pwa/diy-pwa.git"
   },
-  "keywords": ["diy", "components", "react", "static", "pwa", "engineer", "entrepreneurs", "mdx"],
+  "keywords": [
+    "diy",
+    "serverless",
+    "wordpress",
+    "static",
+    "pwa",
+    "engineer",
+    "entrepreneurs",
+    "sales",
+    "salesucation"
+  ],
   "author": "Rich Hildred and Students from Conestoga College in Waterloo, Ontario",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/diy-pwa/diy-pwa/issues"
   },
   "homepage": "https://diy-pwa.github.io/",
-  "dependencies": {
-    "axios": "^1.2.2"
+  "dev-dependencies": {
+    "vitest": "latest"
+  },
+  "devDependencies": {
+    "@php-wasm/node": "^0.6.2",
+    "express": "^4.18.2",
+    "glob": "^10.3.10",
+    "jszip": "^3.10.1",
+    "node-fetch": "^3.3.2",
+    "promised-sqlite3": "^2.1.0"
   }
 }
