--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "diy-pwa",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Rapid 80% working prototype for entrepreneur engineers",
   "type": "module",
   "bin": {
@@ -34,7 +34,7 @@
   "dev-dependencies": {
     "vitest": "latest"
   },
-  "devDependencies": {
+  "dependencies": {
     "@php-wasm/node": "^0.6.2",
     "express": "^4.18.2",
     "glob": "^10.3.10",
