--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "diy-pwa",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "Rapid 80% working prototype for entrepreneur engineers",
   "type": "module",
   "bin": {
     "diy-pwa": "bin/diy-pwa.js"
   },
+  "files": [
+    "lib",
+    "!index.php"
+  ],
   "main": "lib/index.js",
   "scripts": {
     "test": "vitest run spec"
