--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "main": "lib/index.js",
   "scripts": {
-    "test": "vitest run spec"
+    "test": "vitest run spec",
+    "dev": "vite"
   },
   "repository": {
     "type": "git",
@@ -42,6 +43,10 @@
     "promised-sqlite3": "^2.1.0"
   },
   "devDependencies": {
+    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
+    "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
+    "chai": "^5.1.0",
+    "mocha": "^10.3.0",
     "vitest": "^1.3.1"
   }
 }
