--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
   },
   "main": "lib/index.js",
   "scripts": {
-    "test": "vitest run spec",
-    "dev": "vite",
-    "build": "vite build"
+    "test": "vitest run spec"
   },
   "repository": {
     "type": "git",
@@ -34,20 +32,12 @@
   },
   "homepage": "https://diy-pwa.github.io/",
   "dependencies": {
-    "@php-wasm/node": "^0.6.2",
+    "@rhildred/php-wasm-node": "^0.6.2",
     "express": "^4.18.2",
-    "glob": "^10.3.10",
-    "isomorphic-git": "^1.25.6",
     "jszip": "^3.10.1",
-    "memfs": "^4.7.7",
-    "node-fetch": "^3.3.2",
     "promised-sqlite3": "^2.1.0"
   },
   "devDependencies": {
-    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
-    "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
-    "chai": "^5.1.0",
-    "mocha": "^10.3.0",
     "vitest": "^1.3.1"
   }
 }
