--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "@rhildred/php-wasm-node": "^0.6.2",
     "express": "^4.18.2",
+    "glob": "^10.3.10",
     "jszip": "^3.10.1",
     "promised-sqlite3": "^2.1.0"
   },
