--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "diy-pwa",
-  "version": "1.1.12",
+  "version": "1.1.13",
   "description": "Rapid 80% working prototype for entrepreneur engineers",
   "type": "module",
   "bin": {
@@ -17,7 +17,6 @@
   "keywords": [
     "diy",
     "serverless",
-    "wordpress",
     "static",
     "pwa",
     "engineer",
@@ -32,11 +31,7 @@
   },
   "homepage": "https://diy-pwa.github.io/",
   "dependencies": {
-    "@php-wasm/node": "^0.6.2",
-    "express": "^4.18.2",
-    "glob": "^10.3.10",
-    "jszip": "^3.10.1",
-    "promised-sqlite3": "^2.1.0"
+    "glob": "^10.3.10"
   },
   "devDependencies": {
     "vitest": "^1.3.1"
