--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
   },
   "homepage": "https://diy-pwa.github.io/diy-pwa",
   "dependencies": {
-    "glob": "^10.3.10"
+    "cheerio": "^1.0.0",
+    "fast-xml-parser": "^4.5.1",
+    "glob": "^10.3.10",
+    "lunr": "^2.3.9"
   },
   "devDependencies": {
     "vitest": "^1.3.1"
