--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "diy-pwa",
-  "version": "1.1.17",
+  "version": "1.1.18",
   "description": "Rapid 80% working prototype for entrepreneur engineers",
   "type": "module",
   "bin": {
@@ -34,6 +34,7 @@
     "cheerio": "^1.0.0",
     "fast-xml-parser": "^4.5.1",
     "glob": "^10.3.10",
+    "jszip": "^3.10.1",
     "lunr": "^2.3.9"
   },
   "devDependencies": {
